# pomodoro-and-todos-into-obsidian

./: .env.example  .gitignore  README.md  db.py  main.py  migrate_sqlite_to_pg.py  obsidian.py  productivity.db  pyproject.toml
frontend/: index.html
